# building-escape

./: .gitignore  LICENSE  README.md  environment.yml  index.html  pyproject.toml
data/floorPlans/: Funnel_Test1.fplan  HorizontalGate_Test1.fplan  MultiExit.fplan  RO_Test1.fplan  VerticalGate_Test1.fplan  WaitingLine_Test1.fplan  floor.fplan  freihausEG.fplan  small.fplan  t4_big_door.fplan  t4_chokepoints.fplan  t4_double_exit.fplan  t4_funnel.fplan  t4_pillar.fplan  t4_rooms.fplan  t4_simple.fplan
data/floorPlansSSF/: Funnel_Test1_sff.npy  HorizontalGate_Test1_sff.npy  MultiExit_sff.npy  RO_Test1_sff.npy  VerticalGate_Test1_sff.npy  WaitingLine_Test1_sff.npy  floor_sff.npy  freihausEG_sff.npy  small_sff.npy  t4_big_door_sff.npy  t4_chokepoints_sff.npy  t4_funnel_sff.npy  t4_pillar_sff.npy  t4_rooms_sff.npy  t4_simple_sff.npy
src/: MonteCarloPlot.py  agent.py  environment.py  fileLoader.py  floorEnvironment.py  helper.py  loader.py  main.py  main_gui.py  main_old.py  planLoader.py  processFloorPlans.py  robustness.py  sff.py  sharedClasses.py  simulation.py  t4_analyze.py  t4_metrics.py  test.py  visualize.py
src/results/robustness/: mean_evac_matrix_ac15.csv  mean_evac_matrix_ac15.npy
